finished note to self lesson for today

--- a/Notetoself/app/src/main/res/values/strings.xml
+++ b/Notetoself/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Note to self</string>
     <string name="action_settings">ActionSettings</string>
     <string name="action_add_file">ActionAddFile</string>
+    <string name="anims_title">Animation Speed</string>
+    <string name="sound_textbox">On or Off</string>
 </resources>
