finished canvas demo project

--- a/Notetoself/app/src/main/res/values/strings.xml
+++ b/Notetoself/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Note to Self</string>
+    <string name="app_name">A Note of Pineapple</string>
     <string name="action_settings">Change Settings</string>
     <string name="action_add_file">ActionAddFile</string>
     <string name="anims_title">Animation Speed</string>
