--- a/FindingFrench/app/src/main/res/values/strings.xml
+++ b/FindingFrench/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Finding French</string>
+    <string name="action_settings">Settings</string>
 </resources>
